# OpenStudioApplication

./: .cmake-format.py  .git-blame-ignore-revs  .gitignore  .gitmodules  BUILDING.md  CLA.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ConanInstall.cmake  Configuring-OpenStudio-Build-Environments---New.md  Configuring-OpenStudioApplication-Build-Environments.md  Cpp-Coding-Standards.md  FindOpenStudioSDK.cmake  Home.md  Issue-Prioritization.md  Jenkinsfile_linux  Jenkinsfile_osx  Jenkinsfile_windows  LICENSE.md  OpenStudio Application's GitHub Workflow for External Developers.md  OpenStudio Application's GitHub Workflow for Internal Developers.md  OpenStudio-Application-Pull-Requests.md  OpenStudio-Continuous-Integration.md  ProjectMacros.cmake  README.md  SketchUpInstallName.rb  Writing-Style-Guide.md  build_mkdocs.bat  conanfile.py  deploy_mkdocs.bat  fix_includes.py  index.html  mkdocs.yml  start_mkdocs.bat
ci/: pre-commit.sh  (+4 more)
ruby/: CMakeLists.txt  RubyAPI.hpp  openstudio_modeleditor.rb  openstudio_modeleditor_rb.cpp
ruby/test/: PathWatcher_Test.rb  WorkspaceWatcher_Test.rb
src/model_editor/: AboutBox.hpp.in  AccessPolicyStore.cpp  AccessPolicyStore.hpp  Application.cpp  Application.hpp  BridgeClasses.cpp  BridgeClasses.hpp  CMakeLists.txt  ClassViewWidget.cpp  ClassViewWidget.hpp  EditorFrame.cpp  EditorFrame.hpp  GithubReleases.cpp  GithubReleases.hpp  IGLineEdit.cpp  IGLineEdit.hpp  IGPrecisionDialog.cpp  IGPrecisionDialog.hpp  IGSpinBoxes.cpp  IGSpinBoxes.hpp  InspectorDialog.cpp  InspectorDialog.hpp  InspectorDialog.qss  InspectorGadget.cpp  InspectorGadget.hpp  ListWidget.cpp  ListWidget.hpp  ModalDialogs.cpp  ModalDialogs.hpp  ModalDialogs.qss  ModelEditor.i  ModelEditor.rc  ModelEditorAPI.hpp  ModelExplorer.cpp  ModelExplorer.hpp  OSProgressBar.cpp  OSProgressBar.hpp  ObjectExplorer.cpp  ObjectExplorer.hpp  PathWatcher.cpp  (+32 more)
src/model_editor/test/: GithubReleases_GTest.cpp  IGLineEdit_GTest.cpp  InspectorDialog_GTest.cpp  ModalDialogs_GTest.cpp  ModelEditorFixture.cpp  ModelEditorFixture.hpp  PathWatcher_GTest.cpp  QMetaTypes_GTest.cpp  Utilities_GTest.cpp
src/openstudio_app/: AboutBox.hpp.in  CMakeLists.txt  ExternalToolsDialog.cpp  ExternalToolsDialog.hpp  Info.plist.in  LibraryDialog.cpp  LibraryDialog.hpp  OpenStudioApp.cpp  OpenStudioApp.hpp  OpenStudioApp.rc.in  StartupMenu.cpp  StartupMenu.hpp  StartupView.cpp  StartupView.hpp  install_operations.qs  main.cpp  openstudioapp.desktop  qt.conf  split_os_app.sh
src/openstudio_app/Resources/: populate_loads.rb
src/openstudio_app/Resources/ShoeboxModel/: .gitignore  README.md  ShoeboxExample.osm
src/openstudio_app/Resources/ShoeboxModel/ShoeboxExample/: workflow.osw
src/openstudio_app/Resources/ShoeboxModel/ShoeboxExample/measures/create_bar_from_space_type_ratios/: README.md  README.md.erb  measure.rb  measure.xml
src/openstudio_app/Resources/ShoeboxModel/ShoeboxExample/measures/create_typical_building_from_model/: README.md  README.md.erb  measure.rb  measure.xml
src/openstudio_app/Resources/ShoeboxModel/ShoeboxExample/measures/openstudio_results/: measure.rb
src/openstudio_app/Resources/ShoeboxModel/ShoeboxExample/measures/view_data/: README.md  measure.rb  measure.xml
src/openstudio_app/Resources/default/: add_fan_componentmodel.rb  add_fansystemmodel.rb  add_humidifier_steam_gas.rb  add_zonehvac_coolingpanel_radiantconvective_water.rb  hvac_library.osm  office_default.osm
src/openstudio_app/Resources/openstudio_results/: LICENSE.md  README.md  README.md.erb  measure.rb  measure.xml
src/openstudio_app/Resources/openstudio_results/resources/: Siz.AirConditionerVariableRefrigerantFlow.rb  Siz.AirLoopHVAC.rb  Siz.AirLoopHVACUnitaryHeatCoolVAVChangeoverBypass.rb  Siz.AirLoopHVACUnitaryHeatPumpAirToAirMultiSpeed.rb  Siz.AirLoopHVACUnitarySystem.rb  Siz.AirTerminalDualDuctVAV.rb  Siz.AirTerminalSingleDuctConstantVolumeCooledBeam.rb  Siz.AirTerminalSingleDuctConstantVolumeFourPipeInduction.rb  Siz.AirTerminalSingleDuctConstantVolumeReheat.rb  Siz.AirTerminalSingleDuctParallelPIUReheat.rb  Siz.AirTerminalSingleDuctSeriesPIUReheat.rb  Siz.AirTerminalSingleDuctUncontrolled.rb  Siz.AirTerminalSingleDuctVAVHeatAndCoolNoReheat.rb  Siz.AirTerminalSingleDuctVAVHeatAndCoolReheat.rb  Siz.AirTerminalSingleDuctVAVNoReheat.rb  Siz.AirTerminalSingleDuctVAVReheat.rb  Siz.BoilerHotWater.rb  Siz.BoilerSteam.rb  Siz.ChillerAbsorption.rb  Siz.ChillerAbsorptionIndirect.rb  Siz.ChillerElectricEIR.rb  Siz.ChillerHeaterPerformanceElectricEIR.rb  Siz.CoilCoolingDXMultiSpeed.rb  Siz.CoilCoolingDXMultiSpeedStageData.rb  Siz.CoilCoolingDXTwoSpeed.rb  Siz.CoilCoolingDXTwoStageWithHumidityControlMode.rb  Siz.CoilCoolingDXVariableRefrigerantFlow.rb  Siz.CoilCoolingDXVariableSpeed.rb  Siz.CoilCoolingLowTempRadiantVarFlow.rb  Siz.CoilCoolingWater.rb  Siz.CoilCoolingWaterToAirHeatPumpEquationFit.rb  Siz.CoilCoolingWaterToAirHeatPumpVariableSpeedEquationFit.rb  Siz.CoilCoolingWaterToAirHeatPumpVariableSpeedEquationFitSpeedData.rb  Siz.CoilHeatingDXMultiSpeed.rb  Siz.CoilHeatingDXSingleSpeed.rb  Siz.CoilHeatingDXVariableRefrigerantFlow.rb  Siz.CoilHeatingDXVariableSpeed.rb  Siz.CoilHeatingDXVariableSpeedSpeedData.rb  Siz.CoilHeatingDesuperheater.rb  Siz.CoilHeatingGas.rb  (+74 more)
src/openstudio_app/Resources/openstudio_results/tests/: EdgeCaseModel.osm  add_tariff.osw
src/openstudio_app/benchmark/: OpenStudioApp_Benchmark.cpp  OpenStudioApp_Benchmark.hpp
src/openstudio_app/test/: OpenStudioAppFixture.cpp  OpenStudioAppFixture.hpp  Resources_GTest.cpp  Units_GTest.cpp
src/utilities/: CMakeLists.txt  OpenStudioApplicationPathHelpers.cxx.in  OpenStudioApplicationPathHelpers.hpp  OpenStudioApplicationUtilitiesAPI.hpp
src/utilities/test/: OpenStudioApplicationPathHelpers_GTest.cpp
translations/: CMakeLists.txt  OpenStudioApp_ar.ts  OpenStudioApp_ca.ts  OpenStudioApp_de.ts  OpenStudioApp_el.ts  OpenStudioApp_es.qm  OpenStudioApp_es.ts  OpenStudioApp_fa.ts  OpenStudioApp_fr.ts  OpenStudioApp_he.ts  OpenStudioApp_hi.ts  OpenStudioApp_it.ts  OpenStudioApp_ja.ts  OpenStudioApp_pl.ts  OpenStudioApp_vi.ts  OpenStudioApp_zh_CN.ts
(+732 files in other folders)
